--- a/Lab1/Session_2_Logistic_Regression.ipynb
+++ b/Lab1/Session_2_Logistic_Regression.ipynb
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 26,
       "metadata": {
         "id": "j3sNpLyq24jq",
         "outputId": "404d5838-fab6-47a6-c239-a5de3254496e"
@@ -378,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 27,
       "metadata": {
         "id": "SgoFCFP024jq"
       },
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 28,
       "metadata": {
         "id": "YE9rVhFx24jq",
         "outputId": "9ec45deb-0393-4108-c7a7-c8eda6b939fe"
@@ -415,12 +415,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.7686274509803922\n"
+            "0.32941176470588235\n"
           ]
         }
       ],
       "source": [
-        "print(train_set_x[0][1])"
+        "print(train_set_x[0][5])"
       ]
     },
     {
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "4FbGHmDs24jq"
       },
@@ -508,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "FbfcnjRg24jq",
         "outputId": "bf9de01e-78cc-4815-a4d5-2004620f3cab",
@@ -556,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 31,
       "metadata": {
         "id": "76NZa1MB24jr"
       },
@@ -582,7 +582,8 @@
         "    b = 0\n",
         "\n",
         "    ### END CODE HERE ###\n",
-        "\n",
+        "    \n",
+        "    # The assert statement will raise an `AssertionError` if the statement isn't True.\n",
         "    assert(w.shape == (dim, 1))\n",
         "    assert(isinstance(b, float) or isinstance(b, int))\n",
         "\n",
@@ -591,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 32,
       "metadata": {
         "id": "10JPuINq24jr",
         "outputId": "5a3c3c0c-fb91-4bfb-c4f5-60e1395abf73"
@@ -665,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "metadata": {
         "id": "ow1GNLHL24jr"
       },
@@ -712,7 +713,7 @@
         "\n",
         "    assert(dw.shape == w.shape)\n",
         "    assert(db.dtype == float)\n",
-        "    cost = np.squeeze(cost)\n",
+        "    cost = np.squeeze(cost) # converts the 1D array into a scalar quantity\n",
         "    assert(cost.shape == ())\n",
         "\n",
         "    grads = {\"dw\": dw,\n",
@@ -723,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "metadata": {
         "id": "vxruXhN824jr",
         "outputId": "d92cf79f-9620-45be-b0d9-3f62c4a689a2"
@@ -790,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "metadata": {
         "id": "NLuONoFP24jr"
       },
@@ -865,7 +866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "metadata": {
         "id": "8ZQicb9H24js",
         "outputId": "fa452e65-f191-4c8b-af3d-903a8d94e3ca"
@@ -940,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "id": "xWkT_x8E24js"
       },
@@ -987,7 +988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "metadata": {
         "id": "-paN3cMd24jw",
         "outputId": "c946b3c3-cea6-4e23-b5ef-ab5dcd7c7b06"
@@ -1063,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "metadata": {
         "id": "UCKXmWMS24jx"
       },
@@ -1128,7 +1129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "metadata": {
         "id": "Uoy0aDb324jx",
         "outputId": "a7b2e2fe-c45e-4dd2-e284-c84de31c5d58"
@@ -1212,7 +1213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 22,
       "metadata": {
         "id": "_buyNdnJ24jx",
         "outputId": "0632e112-5093-432b-d380-5c83ffa031e6"
@@ -1240,7 +1241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 23,
       "metadata": {
         "id": "b_TMUH5624jx",
         "outputId": "04757fc7-3aad-4584-d03a-8df3de7b10a1"
@@ -1325,7 +1326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 24,
       "metadata": {
         "id": "gjLxKIbL24jy",
         "outputId": "53034db1-125f-4e6d-94d2-6d5f914d81d1"
@@ -1418,7 +1419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 25,
       "metadata": {
         "id": "W0vhRcTR24jy",
         "outputId": "25ce92df-e579-46e1-c850-957836d311b6",
