--- a/Numpy_basics.ipynb
+++ b/Numpy_basics.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "0.2689414213699951"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "0.2689414213699951"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "array([0.73105858, 0.88079708, 0.95257413])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: image2vector\n",
-    "\n",
+    "# flattens a 3D array into a 2D array or vector with (image.shape[0] * image.shape[1] * image.shape[2], 1) as the dimension.\n",
     "def image2vector(image):\n",
     "    vec = image.reshape((image.shape[0] * image.shape[1] * image.shape[2], 1))\n",
     "    return vec\n"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,20 +273,22 @@
     "    x -- The normalised (by row) numpy matrix.\n",
     "    \"\"\"\n",
     "    \n",
-    "    x_norm = np.linalg.norm(x, axis=1, keepdims = True)\n",
-    "    x = x/ x_norm\n",
+    "    x_norm = np.linalg.norm(x, axis=1, keepdims = True) # finds euclidean distance or normal between all elements in the row\n",
+    "    x = x / x_norm\n",
     "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[1000.00799997]\n",
+      " [   7.48331477]]\n",
       "normaliseRows(x) = [[0.         0.999992   0.00399997]\n",
       " [0.26726124 0.53452248 0.80178373]]\n"
      ]
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,13 +319,13 @@
     "\n",
     "def softmax(x):\n",
     "    \"\"\"\n",
-    "    Calculates softmax for eschr row of the input x\n",
+    "    Calculates softmax for each row of the input x\n",
     "\n",
     "    Argument:\n",
     "        x -- A numpy matrix of shape (n, m)\n",
     "        \n",
     "    Returns:\n",
-    "    x -- A numoy matrix with softmax of shaoe (n, m)\n",
+    "    x -- A numpy matrix with softmax of shape (n, m)\n",
     "    \"\"\"\n",
     "    \n",
     "    x_exp = np.exp(x)\n",
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +376,7 @@
      "output_type": "stream",
      "text": [
       "dot = 278\n",
-      " --- Computation time = 0.04399999999993298ms\n",
+      " --- Computation time = 0.236000000000125ms\n",
       "\n",
       "\n",
       "outer = [[81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
@@ -392,7 +394,7 @@
       " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
-      " --- Computation time = 1.3809999999998546ms\n",
+      " --- Computation time = 0.20299999999995322ms\n",
       "\n",
       "\n",
       "elementwise multiplication = [[81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
@@ -410,7 +412,7 @@
       " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
-      " --- Computation time = 0.04099999999995774ms\n",
+      " --- Computation time = 0.0860000000000305ms\n",
       "\n",
       "\n",
       "gdot = [[81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
@@ -428,7 +430,7 @@
       " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
-      " --- Computation time = 0.062000000000006494ms\n"
+      " --- Computation time = 0.07400000000012952ms\n"
      ]
     }
    ],
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +485,7 @@
      "output_type": "stream",
      "text": [
       "dot = 278\n",
-      " --- Computation time = 0.10099999999990672ms\n",
+      " --- Computation time = 0.052999999999858716ms\n",
       "\n",
       "\n",
       "outer = [[81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
@@ -501,7 +503,7 @@
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n",
-      " --- Computation time = 0.10099999999990672ms\n",
+      " --- Computation time = 0.31999999999987594ms\n",
       "\n",
       "\n",
       "elementwise multiplication = [[81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
@@ -519,7 +521,7 @@
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n",
-      " --- Computation time = 0.03799999999998249ms\n",
+      " --- Computation time = 0.04600000000021254ms\n",
       "\n",
       "\n",
       "gdot = [[81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
@@ -537,7 +539,7 @@
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n",
-      " --- Computation time = 0.236000000000125ms\n"
+      " --- Computation time = 0.03400000000031156ms\n"
      ]
     }
    ],
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
